--- a/AtividadesIndividuais/front end - 2/Aula - 2/index.html
+++ b/AtividadesIndividuais/front end - 2/Aula - 2/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Pedra, Papel ou Tesoura</h1>
-    <p>Pronto para desafiar o computador?</p>
-    <p>Quem fizer 2 pontos primeiro ganha</p>
+    <h1>Pedra, Papel ou Tesoura?</h1>
+
+    <h2>Pronto para desafiar o computador?</h2>
+
+    <p>Quem fizer 2 pontos primeiro ganha!</p>
+
     <p>Boa sorte!</p>
+
     <script src="./main.js"></script>
 </body>
 </html>
